[package]
name = "fatrw"
version = "0.1.9"
authors = ["majorz"]
description = "Safe file read and write for FAT filesystems"
license = "Apache-2.0"
edition = "2018"

[dependencies]
env_logger = "=0.6"
anyhow = "=1.0.2"
md-5 = "=0.8.0"
path-absolutize = "=2.0.2"
regex = "1"
tempfile = "=3.0.5"
getrandom = "0.2"
glob = "0.3"
log = "0.4"
memchr = "=2.3.0"
bitflags = "=1.2.1"
byteorder = "=1.3.4"

[dependencies.clap]
version = "=2.33.0"
default-features = false

[profile.release]
opt-level = "z"
codegen-units = 1

[profile.release-static]
inherits = "release"
lto = true
panic = "abort"
