[package]
name = "fatrw"
version = "0.2.3"
authors = ["majorz"]
description = "Safe file read and write for FAT filesystems"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
md-5 = "0.10"
path-absolutize = "3"
regex = "1"
tempfile = "3"
getrandom = "0.2"
glob = "0.3"
memchr = "2"
bitflags = "1"
byteorder = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[profile.release]
opt-level = "z"
codegen-units = 1
