[package]
name = "fatrw"
version = "0.2.7"
authors = ["Zahari Petkov <zahari@balena.io>"]
description = "Safe file read and write for FAT filesystems"
repository = "https://github.com/balena-os/fatrw/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
md-5 = "0.10"
path-absolutize = "3"
regex = "1"
tempfile = "3"
getrandom = "0.2"
glob = "0.3"

[dependencies.clap]
version = "3"
features = ["derive"]

[profile.release]
opt-level = "z"
codegen-units = 1
