[package]
name = "safe-io-cli"
version = "0.1.0"
authors = ["majorz"]
description = "safe-io CLI"
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "safe-io"
path = "src/main.rs"

[dependencies]
safe-io-lib = { version = "*", path = "../safe-io-lib" }
anyhow = "1"
clap = "3.0.0-beta.1"
env_logger = "0.7"
